--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a class="nav-item nav-link">About Us</a>
+                    <a class="nav-item nav-link" href="#about_us">About Us</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                         <div class="dropdown-menu m-0">
-                            <a href="#" class="dropdown-item">SEO Optimization</a>
-                            <a href="#" class="dropdown-item">Search Engine Marketing</a>
-                            <a href="#" class="dropdown-item">Social Media Marketing</a>
-                            <a href="#" class="dropdown-item">App Development</a>
-                            <a href="#" class="dropdown-item">Web Development</a>
+                            <a href="#services" class="dropdown-item">SEO Optimization</a>
+                            <a href="#services" class="dropdown-item">Search Engine Marketing</a>
+                            <a href="#services" class="dropdown-item">Social Media Marketing</a>
+                            <a href="#seo" class="dropdown-item">App Development</a>
+                            <a href="#seo" class="dropdown-item">Web Development</a>
                         </div>
                     </div>
-                    <a href="" class="nav-item nav-link">Contact</a>
+                    <a href="#contactus" class="nav-item nav-link">Contact</a>
 
 
                     <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
@@ -118,7 +118,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner"> 
                 <div class="carousel-item active">
-                     <img class="w-100" src="img/carousel-1.jpg" alt="Image"> 
+                     <img class="w-100" src="img/shaking-hands-3096229.jpg" alt="Image"> 
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">Struggling to make your identity in the digital world?</h5>
@@ -198,12 +198,12 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
+    <div class=" container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" id="about_us">
+        <div class="container py-5" >
             <div class="row g-5">
                 <div class="col-lg-7">
                     <div class="section-title position-relative pb-3 mb-5">
-                        <h5 class="fw-bold text-primary text-uppercase">About Us</h5>
+                        <h5 class="fw-bold text-primary text-uppercase" >About Us</h5>
                         <h1 class="mb-0">The Best IT Solution With 5 Years of Experience</h1>
                     </div>
                     <p class="mb-4">Overall, the past five years have witnessed a rapid evolution in IT solutions, driven by technological innovation, changing market dynamics, and evolving customer expectations. Looking ahead, the trajectory of IT solutions is poised to continue its upward trajectory, shaping the future of business in an increasingly digital world.</p>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.9s" src="img/about.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.9s" src="img/job-5382501.jpg" style="object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="col-lg-4  wow zoomIn" data-wow-delay="0.9s" style="min-height: 350px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.1s" src="img/feature.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.1s" src="img/bulletin-board-3127287.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -294,7 +294,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" id="services">
         <div class="container py-5">
             <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
                 <h5 class="fw-bold text-primary text-uppercase">Our Services</h5>
@@ -306,7 +306,7 @@
                         <div class="service-icon">
                             <i class="fa fa-shield-alt text-white"></i>
                         </div>
-                        <h4 class="mb-3">SEO Optimization</h4>
+                        <h4 class="mb-3" id="seo">SEO Optimization</h4>
                         <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -318,7 +318,7 @@
                         <div class="service-icon">
                             <i class="fa fa-chart-pie text-white"></i>
                         </div>
-                        <h4 class="mb-3">Search Engine Marketing</h4>
+                        <h4 class="mb-3" id="sem">Search Engine Marketing</h4>
                         <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -330,7 +330,7 @@
                         <div class="service-icon">
                             <i class="fa fa-code text-white"></i>
                         </div>
-                        <h4 class="mb-3">Social Media Marketing</h4>
+                        <h4 class="mb-3" id="smm">Social Media Marketing</h4>
                         <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -342,7 +342,7 @@
                         <div class="service-icon">
                             <i class="fab fa-android text-white"></i>
                         </div>
-                        <h4 class="mb-3">App Development</h4>
+                        <h4 class="mb-3" id="ad">App Development</h4>
                         <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -354,7 +354,7 @@
                         <div class="service-icon">
                             <i class="fa fa-search text-white"></i>
                         </div>
-                        <h4 class="mb-3">Web Development</h4>
+                        <h4 class="mb-3" id="wd">Web Development</h4>
                         <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
@@ -722,7 +722,7 @@
 
     <!-- Footer Start -->
     <center>
-    <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s" id="contactus">
         <div class="container">
             <!-- <div class="row gx-5"> -->
                 <!-- <div class="col-lg-4 col-md-6 footer-about">
