--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
@@ -44,7 +48,7 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2">+91 7303071170</i></small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2">+91 7982694189</i></small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@digprep.com</small>
                 </div>
             </div>
@@ -85,7 +89,7 @@
                             <a href="#seo" class="dropdown-item">Web Development</a>
                         </div>
                     </div>
-                    <a href="#contactus" class="nav-item nav-link">Contact</a>
+                    <a href="#contactus" class="nav-item nav-link" id="openPopupBtn">Contact</a>
 
 
                     <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
@@ -123,6 +127,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-3 animated slideInDown">Struggling to make your identity in the digital world?</h5>
                             <h1 class="text-white text-uppercase" >Relax We are here to make your digital dreams a reality</h1>
+                           <!-- <button>Get Quotes</button> -->
                         </div>
                     </div>
                 </div>
@@ -249,18 +254,18 @@
                 <div class="col-lg-4">
                     <div class="row g-5">
                         <div class="col-12 wow zoomIn" data-wow-delay="0.2s">
-                            <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <!-- <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                                 <i class="fa fa-cubes text-white"></i>
-                            </div>
-                            <h4>Best In Industry</h4>
-                            <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                            </div> -->
+                            <h4>Fresh Perspective</h4>
+                            <p class="mb-0">As a new startup, we bring a fresh perspective and innovative ideas to the table. We're not bound by traditional approaches, allowing us to think outside the box and offer creative solutions tailored to your needs</p>
                         </div>
                         <div class="col-12 wow zoomIn" data-wow-delay="0.6s">
-                            <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <!-- <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                                 <i class="fa fa-award text-white"></i>
-                            </div>
-                            <h4>Award Winning</h4>
-                            <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                            </div> -->
+                            <h4>Personalized Attention</h4>
+                            <p class="mb-0">With a smaller team and a focus on quality over quantity, we offer personalized attention to every client. You're not just another project to us – we're dedicated to building strong relationships and understanding your unique challenges to provide the best possible service</p>
                         </div>
                     </div>
                 </div>
@@ -272,18 +277,18 @@
                 <div class="col-lg-4">
                     <div class="row g-5">
                         <div class="col-12 wow zoomIn" data-wow-delay="0.4s">
-                            <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <!-- <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                                 <i class="fa fa-users-cog text-white"></i>
-                            </div>
-                            <h4>Professional Staff</h4>
-                            <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                            </div> -->
+                            <h4>Agility and Flexibility</h4>
+                            <p class="mb-0">We can quickly adapt to changes, pivot strategies, and respond to feedback with ease. This agility allows us to stay ahead of the curve and deliver results in a fast-paced environment.</p>
                         </div>
                         <div class="col-12 wow zoomIn" data-wow-delay="0.8s">
-                            <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <!-- <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                                 <i class="fa fa-phone-alt text-white"></i>
-                            </div>
-                            <h4>24/7 Support</h4>
-                            <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                            </div> -->
+                            <h4>Passion and Drive</h4>
+                            <p class="mb-0">we're fueled by passion and driven to succeed. Every member of our team is deeply committed to our mission and invested in your success. With boundless enthusiasm and determination, we'll go the extra mile to help you achieve your goals.</p>
                         </div>
                     </div>
                 </div>
@@ -307,7 +312,7 @@
                             <i class="fa fa-shield-alt text-white"></i>
                         </div>
                         <h4 class="mb-3" id="seo">SEO Optimization</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
+                        <p class="m-0">Unlock the potential of your website with SEO optimization. Boost your online visibility and reach your target audience effectively.</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -319,7 +324,7 @@
                             <i class="fa fa-chart-pie text-white"></i>
                         </div>
                         <h4 class="mb-3" id="sem">Search Engine Marketing</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
+                        <p class="m-0">Accelerate your website's visibility and drive traffic with Search Engine Marketing (SEM)</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -331,7 +336,7 @@
                             <i class="fa fa-code text-white"></i>
                         </div>
                         <h4 class="mb-3" id="smm">Social Media Marketing</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
+                        <p class="m-0">Elevate your brand's online presence with strategic Social Media Marketing (SMM).</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -343,7 +348,7 @@
                             <i class="fab fa-android text-white"></i>
                         </div>
                         <h4 class="mb-3" id="ad">App Development</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
+                        <p class="m-0">Empower your business with custom App Development solutions designed to enhance user experience.</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -355,19 +360,33 @@
                             <i class="fa fa-search text-white"></i>
                         </div>
                         <h4 class="mb-3" id="wd">Web Development</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
+                        <p class="m-0">Elevate your online presence with expert Web Development services tailored to your needs.</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+
+
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                        <div class="service-icon">
+                           <i class="fa-solid fa-chart-simple"></i>
+                        </div>
+                        <h4 class="mb-3" id="wd">Web Development</h4>
+                        <p class="m-0">Elevate your online presence with expert Web Development services tailored to your needs.</p>
+                        <a class="btn btn-lg btn-primary rounded" href="">
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                     <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                         <h3 class="text-white mb-3">Call Us For Quote</h3>
                         <p class="text-white mb-3">Clita ipsum magna kasd rebum at ipsum amet dolor justo dolor est magna stet eirmod</p>
                         <h2 class="text-white mb-0">+012 345 6789</h2>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -815,9 +834,65 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"><i class="bi bi-arrow-up"></i></a> -->
+    <!-- <a class="btn btn-lg btn-primary rounded back-to-top">Contact us</a> -->
+<!-- contact us -->
+    <button id="openPopupBtn" class="btn btn-primary back-to-top">Contact Us</button>
 
+    <div class="popup-overlay" id="popupOverlay"></div>
+    
+    <div class="popup" id="contactPopup">
+      <span class="close-btn" id="closePopupBtn">&times;</span>
+      <h2>Contact Us</h2>
+      <form>
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number:</label>
+          <input type="tel" class="form-control" id="phone" required>
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea class="form-control" id="message" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary" id="sendEmail">Submit</button>
+      </form>
+    </div>
+    
 
+<script type="text/javascript">
+    (function(){
+      emailjs.init({
+        publicKey: "tBmlrGRUbSOMcfzGy",
+      });
+   })();
+   document.getElementById('sendEmail').addEventListener('click',(e)=>{
+    let toEmail=document.getElementById('email').value;
+    let phone = document.getElementById('phone').value;
+    let message = document.getElementById('message').value;
+    var templateParams = {
+  name: toEmail,
+  notes: message
+};
+    emailjs.send('service_ft7y2dt', 'template_hsbcbp8', templateParams).then(
+  (response) => {
+    console.log('SUCCESS!', response.status, response.text);
+  },
+  (error) => {
+    console.log('FAILED...', error);
+  },
+);
+   
+})
+</script>
+
+<!-- contact us close -->
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
